--- a/NeXt.BulkRenamer/Views/HintView.xaml
+++ b/NeXt.BulkRenamer/Views/HintView.xaml
@@ -18,8 +18,8 @@
             <TextBlock Margin="0,0,5,0" Text="+x"/>
             <TextBlock Margin="0,0,5,0" Text="-x"/>
             <TextBlock Margin="0,0,5,0" Text="?x"/>
-            <TextBlock Margin="0,0,5,0" Text="%x"/>
-            <TextBlock Margin="0,0,5,0" Text="-%x"/>
+            <TextBlock Margin="0,0,5,0" Text="$x"/>
+            <TextBlock Margin="0,0,5,0" Text="-$x"/>
         </StackPanel>
 
         <StackPanel Grid.Column="1" Orientation="Vertical">
