--- a/NeXt.BulkRenamer/Views/FileSelectionView.xaml
+++ b/NeXt.BulkRenamer/Views/FileSelectionView.xaml
@@ -1,12 +1,14 @@
-﻿<UserControl x:Class="NeXt.BulkRenamer.Views.FileSelectionView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:NeXt.BulkRenamer.Views"
-             xmlns:ad="http://gu.se/Adorners"
-             mc:Ignorable="d" 
-             d:DesignHeight="30" d:DesignWidth="600">
+﻿<UserControl
+    x:Class="NeXt.BulkRenamer.Views.FileSelectionView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+    xmlns:local="clr-namespace:NeXt.BulkRenamer.Views"
+    xmlns:ad="http://gu.se/Adorners"
+    mc:Ignorable="d" 
+    Focusable="False"
+    d:DesignHeight="30" d:DesignWidth="600">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
