--- a/NeXt.BulkRenamer/Views/MainView.xaml
+++ b/NeXt.BulkRenamer/Views/MainView.xaml
@@ -18,12 +18,50 @@
             <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
 
-        <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" x:Name="FileSelection" Margin="5"/>
+        <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" x:Name="FileSelection" Margin="5" Focusable="False"/>
 
-        <ListBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="Targets"/>
+        <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="Targets" ScrollViewer.HorizontalScrollBarVisibility="Disabled" IsTextSearchEnabled="False" Focusable="False" >
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <!--Prevent Selection-->
+                    <Setter Property="Focusable" Value="false"/>
+                    <!--Prevent weird highlighting on mouseover-->
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                <Border
+                                    BorderBrush="Transparent"
+                                    BorderThickness="0"
+                                    Background="{TemplateBinding Background}">
+                                    <GridViewRowPresenter HorizontalAlignment="Stretch" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Width="Auto" Margin="0" Content="{TemplateBinding Content}"/>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.ItemContainerStyle>
+            <ListView.View>
+                <GridView AllowsColumnReorder="False">
+                    <GridViewColumn Width="36">
+                        <!--prevent resize of checkbox column-->
+                        <GridViewColumn.Header>
+                            <GridViewColumnHeader Content="" IsHitTestVisible="False"/>
+                        </GridViewColumn.Header>
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <CheckBox IsChecked="{Binding Enabled}" Margin="2,2,0,0"/>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn DisplayMemberBinding="{Binding OriginalName}" Header="Original Name" Width="auto"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding ResultName}"  Header="New Name" Width="9999"/>
+                </GridView>
+            </ListView.View>
+        </ListView>
         <metro:ProgressRing Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" IsActive="{Binding IsLoading}"/>
 
-        <ContentControl Grid.Row="2" Grid.Column="0" x:Name="PatternSelection" Margin="5"/>
+        <ContentControl Grid.Row="2" Grid.Column="0" x:Name="PatternSelection" Margin="5"  Focusable="False"/>
         <Button Grid.Row="2" Grid.Column="1" x:Name="RenameSelected"
                 Content="Rename Selected" Margin="0,5,5,5"/>
     </Grid>
