--- a/NeXt.BulkRenamer/Views/MainView.xaml
+++ b/NeXt.BulkRenamer/Views/MainView.xaml
@@ -1,12 +1,14 @@
-﻿<UserControl x:Class="NeXt.BulkRenamer.Views.MainView"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:NeXt.BulkRenamer.Views"
-             xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+﻿<UserControl
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
+    xmlns:cal="http://www.caliburnproject.org" 
+    x:Class="NeXt.BulkRenamer.Views.MainView"
+    mc:Ignorable="d" 
+    d:DesignHeight="300"
+    d:DesignWidth="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -20,9 +22,9 @@
 
         <ContentControl Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" x:Name="FileSelection" Margin="5" Focusable="False"/>
 
-        <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="Targets" ScrollViewer.HorizontalScrollBarVisibility="Disabled" IsTextSearchEnabled="False" Focusable="False" >
+        <ListView Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2" x:Name="Targets" ScrollViewer.HorizontalScrollBarVisibility="Disabled" IsTextSearchEnabled="False" Focusable="False">
             <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
+                <Style TargetType="{x:Type ListViewItem}">
                     <!--Prevent Selection-->
                     <Setter Property="Focusable" Value="false"/>
                     <!--Prevent weird highlighting on mouseover-->
@@ -44,18 +46,16 @@
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
                     <GridViewColumn Width="36">
-                        <!--prevent resize of checkbox column-->
-                        <GridViewColumn.Header>
-                            <GridViewColumnHeader Content="" IsHitTestVisible="False"/>
-                        </GridViewColumn.Header>
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <CheckBox IsChecked="{Binding Enabled}" Margin="2,2,0,0"/>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
+                        <!--prevent resize of checkbox column-->
+                        <GridViewColumnHeader Content="" IsHitTestVisible="False"/>
                     </GridViewColumn>
                     <GridViewColumn DisplayMemberBinding="{Binding OriginalName}" Header="Original Name" Width="auto"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding ResultName}"  Header="New Name" Width="9999"/>
+                    <GridViewColumn DisplayMemberBinding="{Binding DisplayResultName}" Header="New Name" Width="9999"/>
                 </GridView>
             </ListView.View>
         </ListView>
