--- a/NeXt.BulkRenamer/Views/FileSelectionView.xaml
+++ b/NeXt.BulkRenamer/Views/FileSelectionView.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:local="clr-namespace:NeXt.BulkRenamer.Views"
     xmlns:ad="http://gu.se/Adorners"
+    xmlns:metro="http://metro.mahapps.com/winfx/xaml/controls"
     mc:Ignorable="d" 
     Focusable="False"
     d:DesignHeight="30" d:DesignWidth="600">
